--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
+@import url('../node_modules/bootstrap/dist/css/bootstrap.min.css');
+
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background-color: #DDE7F9;
+}
+
+#root {
+    height: 100%;
+}
+
+.bg-primary {
+    background-color: #131823 !important;
+}
+
+.text-primary {
+    color: #131823 !important;
+}
+
+.btn-primary {
+    background-color: #131823 !important;
+    border-color: #131823 !important;
 }
